--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.1"
   },
