--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,23 @@
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "printWidth": 100
+      }
+    ],
   },
   "env": {
     "browser": true,
