--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
+    "store": "^2.0.12",
     "styled-components": "^4.3.1"
   },
   "scripts": {
