--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-markdown": "^4.1.0",
+    "react-ga": "^2.6.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
     "store": "^2.0.12",
